syntax="proto3";

option go_package = "./congr_proto";

package congratulation_service;


service CongratulationService{
  rpc QueryForCongratulation(CongratulationRequest) returns (CongratulationResponse);
}

message CongratulationRequest{
  string name = 1;
}


message CongratulationResponse{
  string congratulationSentence = 1;
}